--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "react-pure-modal",
   "version": "0.0.1",
   "description": "React modal",
-  "main": "index.js",
+  "main": "dist/commonjs/index.js",
+  "jnext:main": "dist/es/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist",
+    "build:es": "BABEL_ENV=es babel src --out-dir dist/es",
+    "build:cjs": "babel src --out-dir dist/commonjs",
+    "build": "npm run clean && npm run build:cjs && npm run build:es",
+    "clog": "conventional-changelog -i CHANGELOG.md -w"
   },
   "repository": {
     "type": "git",
@@ -25,7 +30,24 @@
     "keymage": "^1.1.3",
     "lodash": "^4.5.1"
   },
+  "devDependencies": {
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.4.0",
+    "babel-eslint": "^4.1.6",
+    "babel-plugin-transform-export-extensions": "^6.4.0",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-es2015-rollup": "^1.1.1",
+    "conventional-changelog": "^0.5.3",
+    "eslint": "^1.10.3",
+    "rimraf": "^2.5.0",
+    "rollup": "^0.24.1",
+    "rollup-plugin-babel": "^2.3.9",
+    "rollup-plugin-npm": "^1.2.1",
+    "yargs": "^3.27.0"
+  },
   "peerDependencies": {
-    "redux": "^3.0.0"
+    "react": "^0.14.0"
   }
 }
