--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,3 @@
 {
-  "plugins": [
-    "transform-object-rest-spread",
-    "transform-export-extensions"
-  ],
-  "env": {
-    "development": {
-      "presets": [ "es2015", "react" ]
-    },
-    "es": {
-      "presets": [ "es2015-rollup", "react" ]
-    }
-  }
+  "presets": [ "es2015", "stage-1", "react" ]
 }
