--- a/package.json
+++ b/package.json
@@ -2,16 +2,14 @@
   "name": "react-pure-modal",
   "version": "0.0.11",
   "description": "React modal",
-  "main": "dist/commonjs/index.js",
-  "jnext:main": "dist/es/index.js",
+  "main": "dist/react-pure-modal.min.js",
+  "jnext:main": "dist/react-pure-modal.min.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build:es": "BABEL_ENV=es babel src --out-dir dist/es",
-    "build:cjs": "babel src --out-dir dist/commonjs",
-    "build:amd": "rollup -c rollup.config.js -f amd",
-    "build:umd": "rollup -c rollup.config.js -f umd",
-    "build": "npm run clean && npm run build:cjs && npm run build:es && npm run build:amd && npm run build:umd",
+    "build": "npm run clean && NODE_ENV=production npm run webpack:prod && npm run webpack:dev",
     "clog": "conventional-changelog -i CHANGELOG.md -w",
+    "webpack:dev": "webpack --config webpack.config.dev.js",
+    "webpack:prod": "webpack --config webpack.config.js",
     "release": "./scripts/release.js"
   },
   "repository": {
@@ -34,21 +32,19 @@
     "lodash": "^4.5.1"
   },
   "devDependencies": {
-    "react": "^0.14.0",
     "babel-cli": "^6.5.1",
     "babel-core": "^6.4.0",
     "babel-eslint": "^4.1.6",
-    "babel-plugin-transform-export-extensions": "^6.4.0",
-    "babel-plugin-transform-object-rest-spread": "^6.3.13",
+    "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-preset-stage-1": "^6.5.0",
     "conventional-changelog": "^0.5.3",
     "eslint": "^1.10.3",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.7",
     "rimraf": "^2.5.0",
-    "rollup": "^0.24.1",
-    "rollup-plugin-babel": "^2.3.9",
-    "rollup-plugin-npm": "^1.2.1",
+    "webpack": "^1.12.14",
     "yargs": "^3.27.0"
   },
   "peerDependencies": {
