--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run clean && NODE_ENV=production npm run webpack:prod && npm run webpack:dev",
     "clog": "conventional-changelog -i CHANGELOG.md -w",
     "webpack:dev": "webpack --config webpack.config.dev.js --watch",
-    "webpack:prod": "webpack --config webpack.config.js",
+    "webpack:prod": "webpack --config webpack.config.js --watch",
     "release": "./scripts/release.js"
   },
   "repository": {
@@ -28,8 +28,7 @@
   },
   "homepage": "https://github.com/max-mykhailenko/react-pure-modal#readme",
   "dependencies": {
-    "keymage": "^1.1.3",
-    "lodash": "^4.5.1"
+    "keymage": "^1.1.3"
   },
   "devDependencies": {
     "babel-cli": "^6.5.1",
