--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pure-modal",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "React modal",
   "main": "dist/react-pure-modal.min.js",
   "jnext:main": "dist/react-pure-modal.min.js",
@@ -28,22 +28,22 @@
   },
   "homepage": "https://github.com/max-mykhailenko/react-pure-modal#readme",
   "devDependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-core": "^6.4.0",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-1": "^6.5.0",
-    "conventional-changelog": "^0.5.3",
-    "eslint": "^1.10.3",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.7",
-    "rimraf": "^2.5.0",
-    "webpack": "^1.12.14",
-    "yargs": "^3.27.0"
+    "babel-cli": "6.7.7",
+    "babel-core": "6.7.7",
+    "babel-eslint": "6.0.4",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.3.13",
+    "babel-preset-stage-1": "6.5.0",
+    "conventional-changelog": "1.1.0",
+    "eslint": "2.9.0",
+    "react": "15.0.2",
+    "react-dom": "15.0.2",
+    "rimraf": "2.5.2",
+    "webpack": "1.13.0",
+    "yargs": "4.6.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0"
+    "react": "^15.0.0"
   }
 }
