--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "clog": "conventional-changelog -i CHANGELOG.md -w",
     "webpack:dev": "webpack --config webpack.config.dev.js",
     "webpack:prod": "webpack --config webpack.config.js",
+    "watch": "webpack --config webpack.config.dev.js -- --watch",
+    "test": "jest",
     "release": "./scripts/release.js"
   },
   "repository": {
@@ -27,23 +29,30 @@
     "url": "https://github.com/max-mykhailenko/react-pure-modal/issues"
   },
   "homepage": "https://github.com/max-mykhailenko/react-pure-modal#readme",
+  "dependencies": {
+    "react": "15.3.1",
+    "react-dom": "15.3.1"
+  },
   "devDependencies": {
-    "babel-cli": "6.7.7",
-    "babel-core": "6.7.7",
-    "babel-eslint": "6.0.4",
-    "babel-loader": "6.2.4",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-react": "6.3.13",
-    "babel-preset-stage-1": "6.5.0",
+    "babel-cli": "6.14.0",
+    "babel-core": "6.14.0",
+    "babel-eslint": "6.1.2",
+    "babel-jest": "15.0.0",
+    "babel-loader": "6.2.5",
+    "babel-polyfill": "6.13.0",
+    "babel-preset-es2015": "6.14.0",
+    "babel-preset-react": "6.11.1",
+    "babel-preset-stage-1": "6.13.0",
     "conventional-changelog": "1.1.0",
-    "eslint": "2.9.0",
-    "react": "15.0.2",
-    "react-dom": "15.0.2",
-    "rimraf": "2.5.2",
-    "webpack": "1.13.0",
-    "yargs": "4.6.0"
+    "eslint": "3.5.0",
+    "jest": "15.1.1",
+    "react-test-renderer": "15.3.1",
+    "react-addons-test-utils": "15.3.1",
+    "rimraf": "2.5.4",
+    "webpack": "1.13.2",
+    "yargs": "5.0.0"
   },
   "peerDependencies": {
-    "react": "^15.0.0"
+    "react": "15.3.1"
   }
 }
