--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pure-modal",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "React modal",
   "main": "dist/react-pure-modal.min.js",
   "jnext:main": "dist/react-pure-modal.min.js",
@@ -10,7 +10,6 @@
     "clog": "conventional-changelog -i CHANGELOG.md -w",
     "webpack:dev": "webpack --config webpack.config.dev.js",
     "webpack:prod": "webpack --config webpack.config.js",
-    "watch": "webpack --config webpack.config.dev.js -- --watch",
     "test": "jest",
     "test-ci": "jest --json",
     "release": "./scripts/release.js"
@@ -45,11 +44,14 @@
     "babel-preset-react": "6.11.1",
     "babel-preset-stage-1": "6.13.0",
     "conventional-changelog": "1.1.0",
+    "css-loader": "0.25.0",
     "eslint": "3.5.0",
+    "extract-text-webpack-plugin": "1.0.1",
     "jest": "15.1.1",
-    "react-test-renderer": "15.3.1",
     "react-addons-test-utils": "15.3.1",
+    "react-test-renderer": "15.3.1",
     "rimraf": "2.5.4",
+    "style-loader": "0.13.1",
     "webpack": "1.13.2",
     "yargs": "5.0.0"
   },
