--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "15.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "6.4.1",
     "babel-cli": "6.14.0",
     "babel-core": "6.14.0",
     "babel-eslint": "6.1.2",
@@ -48,6 +49,7 @@
     "eslint": "3.5.0",
     "extract-text-webpack-plugin": "1.0.1",
     "jest": "15.1.1",
+    "postcss-loader": "0.13.0",
     "react-addons-test-utils": "15.3.1",
     "react-test-renderer": "15.3.1",
     "rimraf": "2.5.4",
