--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pure-modal",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "React modal",
   "main": "dist/react-pure-modal.min.js",
   "jnext:main": "dist/react-pure-modal.min.js",
@@ -10,8 +10,8 @@
     "clog": "conventional-changelog -i CHANGELOG.md -w",
     "webpack:dev": "webpack --config webpack.config.dev.js",
     "webpack:prod": "webpack --config webpack.config.js",
-    "test": "jest",
-    "test-ci": "jest --json",
+    "test": "jest --json",
+    "test:dev": "jest --watch",
     "release": "./scripts/release.js"
   },
   "repository": {
@@ -38,7 +38,7 @@
     "babel-cli": "6.14.0",
     "babel-core": "6.14.0",
     "babel-eslint": "6.1.2",
-    "babel-jest": "15.0.0",
+    "babel-jest": "17.0.0",
     "babel-loader": "6.2.5",
     "babel-polyfill": "6.13.0",
     "babel-preset-es2015": "6.14.0",
@@ -48,7 +48,7 @@
     "css-loader": "0.25.0",
     "eslint": "3.5.0",
     "extract-text-webpack-plugin": "1.0.1",
-    "jest": "15.1.1",
+    "jest": "17.0.0",
     "postcss-loader": "0.13.0",
     "react-addons-test-utils": "15.3.1",
     "react-test-renderer": "15.3.1",
