--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "webpack:prod": "webpack --config webpack.config.js",
     "test": "jest --json",
     "test:dev": "jest --watch",
-    "release": "./scripts/release.js"
+    "release": "./scripts/release.js",
+    "flow": "flow"
   },
   "repository": {
     "type": "git",
@@ -30,8 +31,6 @@
   },
   "homepage": "https://github.com/max-mykhailenko/react-pure-modal#readme",
   "devDependencies": {
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0",
     "autoprefixer": "6.4.1",
     "babel-cli": "6.14.0",
     "babel-core": "6.14.0",
@@ -40,20 +39,26 @@
     "babel-loader": "6.2.5",
     "babel-polyfill": "6.13.0",
     "babel-preset-es2015": "6.14.0",
+    "babel-preset-flow": "6.23.0",
     "babel-preset-react": "6.11.1",
     "babel-preset-stage-1": "6.13.0",
     "conventional-changelog": "1.1.0",
     "css-loader": "0.25.0",
     "eslint": "3.10.0",
     "eslint-config-airbnb": "13.0.0",
+    "eslint-plugin-flowtype": "2.34.0",
+    "eslint-plugin-flowtype-errors": "3.3.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.2",
     "eslint-plugin-react": "6.6.0",
     "extract-text-webpack-plugin": "1.0.1",
+    "flow-bin": "0.49.1",
     "jest": "17.0.0",
     "postcss-loader": "0.13.0",
-    "react-addons-test-utils": "^15.4.0",
-    "react-test-renderer": "^15.4.0",
+    "react": "15.6.1",
+    "react-addons-test-utils": "15.6.0",
+    "react-dom": "15.6.1",
+    "react-test-renderer": "15.6.1",
     "rimraf": "2.5.4",
     "style-loader": "0.13.1",
     "webpack": "1.13.2",
