--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pure-modal",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "React modal",
   "main": "dist/react-pure-modal.min.js",
   "jnext:main": "dist/react-pure-modal.min.js",
@@ -30,8 +30,6 @@
   },
   "homepage": "https://github.com/max-mykhailenko/react-pure-modal#readme",
   "devDependencies": {
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0",
     "autoprefixer": "6.4.1",
     "babel-cli": "6.14.0",
     "babel-core": "6.14.0",
@@ -52,7 +50,10 @@
     "extract-text-webpack-plugin": "1.0.1",
     "jest": "17.0.0",
     "postcss-loader": "0.13.0",
+    "prop-types": "15.5.10",
+    "react": "^15.4.0",
     "react-addons-test-utils": "^15.4.0",
+    "react-dom": "^15.4.0",
     "react-test-renderer": "^15.4.0",
     "rimraf": "2.5.4",
     "style-loader": "0.13.1",
