--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "webpack:dev": "webpack --config webpack.config.dev.js",
     "webpack:prod": "webpack --config webpack.config.js",
     "test": "jest --json",
+    "test-ci": "jest --ci",
     "test:dev": "jest --watch",
     "release": "./scripts/release.js"
   },
