--- a/package.json
+++ b/package.json
@@ -31,35 +31,36 @@
   },
   "homepage": "https://github.com/max-mykhailenko/react-pure-modal#readme",
   "devDependencies": {
-    "autoprefixer": "6.4.1",
-    "babel-cli": "6.14.0",
-    "babel-core": "6.14.0",
-    "babel-eslint": "7.1.0",
-    "babel-jest": "17.0.0",
-    "babel-loader": "6.2.5",
-    "babel-polyfill": "6.13.0",
-    "babel-preset-es2015": "6.14.0",
-    "babel-preset-react": "6.11.1",
-    "babel-preset-stage-1": "6.13.0",
-    "conventional-changelog": "1.1.0",
-    "css-loader": "0.25.0",
-    "eslint": "3.10.0",
-    "eslint-config-airbnb": "13.0.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "2.2.2",
-    "eslint-plugin-react": "6.6.0",
-    "extract-text-webpack-plugin": "1.0.1",
-    "jest": "17.0.0",
-    "postcss-loader": "0.13.0",
+    "autoprefixer": "7.2.5",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-eslint": "8.2.1",
+    "babel-jest": "22.1.0",
+    "babel-loader": "7.1.2",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-1": "6.24.1",
+    "conventional-changelog": "1.1.7",
+    "css-loader": "0.28.9",
+    "eslint": "4.16.0",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "7.6.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "jest": "22.1.4",
+    "postcss-csso": "3.0.0",
+    "postcss-loader": "2.0.10",
     "prop-types": "15.6.0",
-    "react": "16.0.0",
+    "react": "16.2.0",
     "react-addons-test-utils": "^15.4.0",
-    "react-dom": "16.0.0",
-    "react-test-renderer": "16.0.0",
-    "rimraf": "2.5.4",
-    "style-loader": "0.13.1",
-    "webpack": "1.13.2",
-    "yargs": "5.0.0"
+    "react-dom": "16.2.0",
+    "react-test-renderer": "16.2.0",
+    "rimraf": "2.6.2",
+    "style-loader": "0.20.1",
+    "webpack": "3.10.0",
+    "yargs": "11.0.0"
   },
   "peerDependencies": {
     "react": "^15.3.0 || ^16.0"
