--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -12,8 +12,6 @@ jobs:
     steps:
       - uses: release-drafter/release-drafter@v5
         with:
-          template: |
-            ## What’s Changed
-            $CHANGES
+          config-name: release-drafter-config.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
