--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clog": "conventional-changelog -i CHANGELOG.md -w",
     "webpack:dev": "webpack --config webpack.config.dev.js",
     "webpack:prod": "webpack --config webpack.config.js",
+    "start:dev": "webpack-dev-server --mode development --open",
     "test": "jest --json",
     "test-ci": "jest --ci",
     "test:dev": "jest --watch",
@@ -48,7 +49,7 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.6.0",
-    "extract-text-webpack-plugin": "3.0.2",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "jest": "22.1.4",
     "postcss-csso": "3.0.0",
     "postcss-loader": "2.0.10",
@@ -59,7 +60,9 @@
     "react-test-renderer": "16.2.0",
     "rimraf": "2.6.2",
     "style-loader": "0.20.1",
-    "webpack": "3.10.0",
+    "webpack": "4.2.0",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0",
     "yargs": "11.0.0"
   },
   "peerDependencies": {
