--- a/package.json
+++ b/package.json
@@ -49,18 +49,18 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.6.0",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "jest": "22.1.4",
+    "mini-css-extract-plugin": "0.9.0",
     "postcss-csso": "3.0.0",
     "postcss-loader": "2.0.10",
     "prop-types": "15.6.0",
     "react": "16.2.0",
     "react-addons-test-utils": "^15.4.0",
-    "react-dom": "16.2.0",
+    "react-dom": "16.13.1",
     "react-test-renderer": "16.2.0",
     "rimraf": "2.6.2",
     "style-loader": "0.20.1",
-    "webpack": "4.2.0",
+    "webpack": "4.43.0",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
     "yargs": "11.0.0"
