--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-react": "7.6.0",
     "jest": "22.1.4",
     "mini-css-extract-plugin": "0.9.0",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
     "postcss-csso": "3.0.0",
     "postcss-loader": "2.0.10",
     "prop-types": "15.6.0",
