--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/max-mykhailenko/react-pure-modal#readme",
   "devDependencies": {
+    "@types/react": "15.0.4",
     "autoprefixer": "7.2.5",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
@@ -60,6 +61,7 @@
     "react-test-renderer": "16.13.1",
     "rimraf": "2.6.2",
     "style-loader": "0.20.1",
+    "typescript": "3.9.7",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
