--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/max-mykhailenko/react-pure-modal#readme",
   "devDependencies": {
     "@types/react": "16.9.43",
+    "@types/react-dom": "16.9.8",
     "autoprefixer": "7.2.5",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
