--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -23,7 +23,7 @@ jobs:
           # See the `pathspec`-documentation for git
           # - https://git-scm.com/docs/git-add#Documentation/git-add.txt-ltpathspecgt82308203
           # - https://git-scm.com/docs/gitglossary#Documentation/gitglossary.txt-aiddefpathspecapathspec
-          file_pattern: src/*.js dist/*.js
+          file_pattern: src/*.js dist/*.js dist/*.css
           # Optional commit user and author settings
           commit_user_name: My GitHub Actions Bot
           commit_user_email: max-github-actions-bot@memcrab.com
