--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Apply automatic changes
-          file_pattern: src/*.js dist/*.js dist/*.css example/* index.html
+          # file_pattern: src/*.js dist/*.js dist/*.css example/* index.html
