--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,20 @@
 {
-  "include": [
-    "src/*.tsx"
-  ],
+  "include": ["src/*.tsx"],
   "compilerOptions": {
-    "outDir": "./dist/",
+    "declaration": true,
+    "emitDeclarationOnly": true,
     "sourceMap": true,
-    "noImplicitAny": false,
-    "target": "es2015",
+    "noImplicitAny": true,
+    "module": "commonjs",
+    "target": "es2016",
     "jsx": "react",
+    "lib": ["es2018", "dom"],
+    "esModuleInterop": true,
+    "strict": true,
+    "importsNotUsedAsValues": "error",
+    "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "allowJs": true
+    "typeRoots": ["./@types/**", "./node_modules/@types"],
+    "types": ["node", "jest"]
   }
 }
